# 3DRenderEngine

./: 3DGS 训练运行指南-202603171206.md  CMakeLists.txt  README.md  help.txt  基于 UE 场景采集的 3DGS 重建流程-202603171206.md  当前3D高斯采集、处理、消费方案-202603171206.md
include/: BrightFilter.h  BrightFilterShader.h  Camera.h  Character.h  CombineFilter.h  CombineShader.h  ContrastChanger.h  ContrastShader.h  DisplayManager.h  Entity.h  EntityRenderer.h  Fbo.h  FontRenderer.h  FontShader.h  FontType.h  GUIText.h  GuiRenderer.h  GuiShader.h  GuiTexture.h  HeightsGenerator.h  HorizontalBlur.h  HorizontalBlurShader.h  ImageRenderer.h  Light.h  Line.h  Loader.h  MasterRenderer.h  Maths.h  MetaFile.h  ModelData.h  ModelDataNM.h  ModelTexture.h  MousePicker.h  NormalMappedObjLoader.h  NormalMappingRenderer.h  NormalMappingShader.h  OBJFileLoader.h  OBJLoader.h  Particle.h  ParticleMaster.h  (+35 more)
include/glad/: glad.h
src/: glad.c
src/bloom/: BrightFilter.cpp  BrightFilterShader.cpp  CombineFilter.cpp  CombineShader.cpp
src/entites/: Camera.cpp  Entity.cpp  Light.cpp  Player.cpp
src/fontMeshCreator/: Character.cpp  FontType.cpp  GUIText.cpp  Line.cpp  MetaFile.cpp  TextMeshCreator.cpp  TextMeshData.cpp  Word.cpp
src/fontRendering/: FontRenderer.cpp  FontShader.cpp  TextMaster.cpp
src/gaussianBlur/: HorizontalBlur.cpp  HorizontalBlurShader.cpp  VerticalBlur.cpp  VerticalBlurShader.cpp
src/glsl/: TerrainFragmentShader.glsl  TerrainVertexShader.glsl  blurFragment.glsl  brightFilterFragment.glsl  combineFragment.glsl  contrastFragment.glsl  contrastVertex.glsl  fontFragment.glsl  fontVertex.glsl  (+17 more)
(+53 files in other folders)
